# cours_work_7

./: README.md  pyproject.toml
config/: settings.py  urls.py
management/: admin.py  forms.py  models.py  urls.py  views.py
management/migrations/: 0001_initial.py  0002_message.py
management/templates/management/: base.html  client_detail.html  client_form.html  client_list.html  home.html  message_confirm_delete.html  message_detail.html  message_list.html
