[tool.poetry]
name = "cours-work-7"
version = "0.1.0"
description = ""
authors = ["Alekset_Milyaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.1.4"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
